--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.rmannibucau</groupId>
   <artifactId>filtering-agent</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>Filtering Agent</name>
   <description>Runs on a JVM to prevent some class code to be executed.</description>
   <url>https://github.com/rmannibucau/filtering-agent</url>
@@ -44,7 +42,7 @@
           <target>8</target>
           <archive>
             <manifestEntries>
-              <Premain-Class>com.github.rmannibucau.javaagent.filtering.FilteringAgent</Premain-Class>asses>
+              <Premain-Class>com.github.rmannibucau.javaagent.filtering.FilteringAgent</Premain-Class>asses&gt;
             </manifestEntries>
           </archive>
         </configuration>
@@ -152,7 +150,7 @@
     <connection>scm:git:https://github.com/rmannibucau/filtering-agent.git</connection>
     <developerConnection>scm:git:https://github.com/rmannibucau/filtering-agent.git</developerConnection>
     <url>https://github.com/rmannibucau/filtering-agent</url>
-    <tag>HEAD</tag>
+    <tag>filtering-agent-1.0.0</tag>
   </scm>
 
   <distributionManagement>
